--- a/AutomationFramework.EntityFramework/AutomationFramework.EntityFramework.csproj
+++ b/AutomationFramework.EntityFramework/AutomationFramework.EntityFramework.csproj
@@ -2,10 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <PackageId>AutomationFramework.EntityFramework</PackageId>
+    <Version>1.0.1</Version>
+    <Authors>Ryan Fitzsimmons</Authors>
+    <PackageDescription>Library to connect entityframework to automationframework</PackageDescription>
+    <RepositoryUrl>https://github.com/RyanFitzsimmons/AutomationFramework.EntityFramework/tree/master/AutomationFramework.EntityFramework</RepositoryUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutomationFramework" Version="1.0.0" />
+    <PackageReference Include="AutomationFramework" Version="1.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
   </ItemGroup>
 
