--- a/AutomationFramework.EntityFramework.UnitTests/AutomationFramework.EntityFramework.UnitTests.csproj
+++ b/AutomationFramework.EntityFramework.UnitTests/AutomationFramework.EntityFramework.UnitTests.csproj
@@ -7,7 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutomationFramework" Version="1.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Serilog.Sinks.Xunit2" Version="1.0.0" />
@@ -20,6 +19,10 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutomationFramework.EntityFramework\AutomationFramework.EntityFramework.csproj" />
   </ItemGroup>
 
 </Project>
