--- a/AutomationFramework.EntityFramework/AutomationFramework.EntityFramework.csproj
+++ b/AutomationFramework.EntityFramework/AutomationFramework.EntityFramework.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>AutomationFramework.EntityFramework</PackageId>
-    <Version>1.0.3</Version>
+    <Version>1.0.4</Version>
     <Authors>Ryan Fitzsimmons</Authors>
     <PackageDescription>Library to connect entityframework to automationframework</PackageDescription>
     <RepositoryUrl>https://github.com/RyanFitzsimmons/AutomationFramework.EntityFramework/tree/master/AutomationFramework.EntityFramework</RepositoryUrl>
@@ -11,7 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutomationFramework" Version="1.0.3" />
+    <PackageReference Include="AutomationFramework" Version="1.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
   </ItemGroup>
 
