--- a/AutomationFramework.EntityFramework.UnitTests/AutomationFramework.EntityFramework.UnitTests.csproj
+++ b/AutomationFramework.EntityFramework.UnitTests/AutomationFramework.EntityFramework.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Serilog.Sinks.Xunit2" Version="1.0.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
