--- a/AutomationFramework.EntityFramework/AutomationFramework.EntityFramework.csproj
+++ b/AutomationFramework.EntityFramework/AutomationFramework.EntityFramework.csproj
@@ -1,18 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <PackageId>AutomationFramework.EntityFramework</PackageId>
-    <Version>1.1.9</Version>
+    <Version>1.2.0</Version>
     <Authors>Ryan Fitzsimmons</Authors>
     <PackageDescription>Library to connect entityframework to automationframework</PackageDescription>
     <RepositoryUrl>https://github.com/RyanFitzsimmons/AutomationFramework.EntityFramework/tree/master/AutomationFramework.EntityFramework</RepositoryUrl>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Title>Automation Framework Entity Framework</Title>
+    <Description>Library to connect entityframework to automationframework</Description>
+    <PackageTags>Automation Restartable Entity Framework</PackageTags>
+    <PackageProjectUrl>https://github.com/RyanFitzsimmons/AutomationFramework.EntityFramework</PackageProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AutomationFramework" Version="1.1.10" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+    <PackageReference Include="AutomationFramework" Version="1.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.1" />
   </ItemGroup>
 
 </Project>
